--- a/vignettes/starting_secsse.html
+++ b/vignettes/starting_secsse.html
@@ -597,7 +597,7 @@ the concealed states will get their own rates specified. Setting this to
 FALSE would set their rates equal to the observed rates (5 and 6). The
 way to read the transition matrix is column-row, e.g. starting at state
 0A, with rate 5 the species will shift to state 1A and with rate 7 it
-will shift to state 0B. We intentionially ignore ‘double’ shifts,
+will shift to state 0B. We intentionally ignore ‘double’ shifts,
 e.g. from 0A to 1B, where both the observed and the concealed trait
 shift at the same time. If you have good evidence to include such shifts
 in your model, you can modify the trans_matrix by hand of course.</p>
