Re-knit vignettes. typo

--- a/vignettes/starting_secsse.html
+++ b/vignettes/starting_secsse.html
@@ -979,7 +979,9 @@ ETD model, which we have correctly recovered!</p>
 feel free to create an issue at the package’s GitHub repository <a href="https://github.com/rsetienne/secsse/issues" class="uri">https://github.com/rsetienne/secsse/issues</a> or e-mail the
 authors for help with this R package. Additionally, bug reports and
 feature requests are welcome by the same means.</p>
-<p>======= ## References</p>
+</div>
+<div id="references" class="section level2">
+<h2>References</h2>
 <p>Beaulieu, J. M., O’Meara, B. C., &amp; Donoghue, M. J. (2013).
 Identifying hidden rate changes in the evolution of a binary
 morphological character: the evolution of plant habit in campanulid
