--- a/vignettes/secsse_versions.html
+++ b/vignettes/secsse_versions.html
@@ -14,7 +14,7 @@
 
 <meta name="date" content="2023-07-10" />
 
-<title>secsse versions</title>
+<title>Secsse versions</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -338,7 +338,7 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 
 
 
-<h1 class="title toc-ignore">secsse versions</h1>
+<h1 class="title toc-ignore">Secsse versions</h1>
 <h4 class="author">Thijs Janzen</h4>
 <h4 class="date">2023-07-10</h4>
 
@@ -347,6 +347,8 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 <p>secsse has gone over many versions since it’s first appearance on
 CRAN in 2019. Here, we would like to shortly go over the main versions
 of secsse, and compare their computational performance.</p>
+<div id="secsse-versions" class="section level2">
+<h2>Secsse Versions</h2>
 <div id="section" class="section level3">
 <h3>1.0.0</h3>
 <p>The first version of secsse appeared in January of 2019 on CRAN. It
@@ -384,6 +386,7 @@ speed.</p>
 <p>Version 3.0.0 is expected to arrive to CRAN in the second half of
 2023. It extends the C++ code base used for the standard likelihood to
 the cla likelihood, harnessing the same computation improvement.</p>
+</div>
 </div>
 <div id="speed" class="section level2">
 <h2>Speed</h2>
